# kujibet

./: .gitignore  README.md  app.yaml  package-lock.json  package.json
.github/workflows/: nodejs.yml
client/: README.md  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.tsx  app.config.ts  index.tsx
client/src/animation/: kuji.ts
client/src/components/: ClusterModal.tsx  ClusterStatusButton.tsx  Header.tsx
client/src/pages/: HomePage.tsx
client/src/providers/server/: index.tsx
client/src/providers/transactions/: create.tsx
client/src/styles/: custom-variables.scss  custom.scss
client/src/styles/custom/: _header.scss
client/src/styles/dashkit/: _card.scss  _header.scss  _variables.scss
client/src/styles/dashkit/dark/: _variables-dark.scss
program/: Cargo.toml
scripts/: fees.sh
server/: .eslintrc.json  package-lock.json  package.json
server/src/: app.ts  program.ts  server.ts  urls.ts  utils.ts
src/: app.ts
